--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "my-crypto-zombie",
+  "name": "CryptozombieS",
   "version": "0.1.0",
   "private": false,
-  "license": "Apache-2.0",
-  "homepage": "https://fankouzu.github.io/my-crypto-zombie",
+  "license": "",
+  "homepage": "https://Wind-ChasingBoy.github.io/Cryptozombies",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "gh-pages": "^2.1.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
