--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "CryptozombieS",
+  "name": "Cryptozombies",
   "version": "0.1.0",
   "private": false,
   "license": "",
-  "homepage": "https://Wind-ChasingBoy.github.io/Cryptozombies",
+  "homepage": "https://wind-chasingboy.github.io/Cryptozombies",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
